[package]
name = "sha2"
version = "0.1.2"
authors = ["The Rust-Crypto Project Developers"]
description = "Pure Rust SHA-2"

documentation = "http://brson.github.io/rust-sha2/sha2"
repository = "https://github.com/brson/rust-sha2"
readme = "README.md"
keywords = ["sha2", "SHA-2", "crypto", "hash"]
license = "MIT/Apache-2.0"

[dependencies]
rustc-serialize = "0.3.19"

[lib]
name = "sha2"
path = "lib.rs"
